--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,7 @@
     <string name="tb_field_jumlah">Jumlah</string>
     <string name="btn_cancel_message">Cancel</string>
     <string name="btn_confirm_message">Confirm</string>
+    <string name="btn_check_message">Check</string>
     <string name="title_tanggal_pesanan">Tanggal Pesanan :</string>
     <string name="title_nomor_pesanan">Nomor Pesanan :</string>
     <string name="title_status_pesanan">Status Pesanan :</string>
@@ -153,6 +154,29 @@
     <string name="pcs">pcs</string>
     <string name="wib">WIB</string>
 
+    <!-- sales order screen -->
+    <string name="app_bar_sales_order">Sales Order</string>
+    <string name="payment_status_sales_order">Payment Status</string>
+    <string name="payment_method_sales_order">Payment Method</string>
+    <string name="due_date_sales_order">Due Date</string>
+    <string name="hint_select_payment_method">-Select-</string>
+    <string name="hint_select_due_date">-Select-</string>
+    <string name="btn_finish_so">Finish</string>
+    <string name="btn_send_so">Send</string>
+
+    <!-- detail sales screen -->
+    <string name="app_bar_detail_sales">Detail Sales</string>
+    <string name="title_detail_sales">Detail Sales</string>
+    <string name="date_detail_sales">Date</string>
+    <string name="hospital_detail_sales">Hospital</string>
+    <string name="patient_name_detail_sales">Patient Name</string>
+    <string name="medical_record_detail_sales">Medical Record</string>
+    <string name="payment_status_detail_sales">Payment Status</string>
+    <string name="payment_method_detail_sales">Payment Method</string>
+    <string name="title_rental_item_detail_sales">Rental Item</string>
+    <string name="title_purchased_item_detail_sales">Purchased Item</string>
+    <string name="title_total_price_detail_sales">Total Price</string>
+
     <!--  Patient  -->
     <string name="medrec">Medical Record</string>
     <string name="search_patient">Search Patient</string>
@@ -194,6 +218,8 @@
     <string name="tv_title_status_accepted">Status</string>
     <string name="tv_title_operation">Operation</string>
     <string name="tv_countdown">00:00</string>
+    <string name="tv_start">START</string>
+    <string name="tv_accepted">ACCEPTED</string>
 
     <!-- stock request screen -->
     <string name="app_bar_stock_request">Stock Request</string>
@@ -273,4 +299,15 @@
 
     <!-- list item history stock item screen -->
     <string name="no_request_stock">No. Request</string>
+
+    <!-- bottom sheet bar payment method -->
+    <string name="title_select_payment_method">Select Payment Method</string>
+    <string name="rd_cash">Cash</string>
+    <string name="rd_credit">Credit</string>
+    <string name="btn_choose_payment">Choose</string>
+
+    <!-- bottom sheet bar edit price -->
+    <string name="et_hint_price">Price</string>
+    <string name="btn_save_new_price">Save</string>
+    <string name="title_edit_price_item">Edit Price Item</string>
 </resources>
