--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,6 +165,8 @@
     <string name="payment_status_sales_order">Payment Status</string>
     <string name="payment_method_sales_order">Payment Method</string>
     <string name="due_date_sales_order">Due Date</string>
+    <string name="tv_select_patient">-Select-</string>
+    <string name="tv_empty">~empty~</string>
     <string name="hint_select_payment_method">-Select-</string>
     <string name="hint_select_due_date">-Select-</string>
     <string name="btn_finish_so">Finish</string>
@@ -187,13 +189,7 @@
     <string name="medrec">Medical Record</string>
     <string name="search_patient">Search Patient</string>
     <string name="patient_name">Patient Name</string>
-    <string name="date_birth">Date of Birth</string>
-    <string name="gender">Gender</string>
-    <string name="address">Addresss</string>
-    <string name="country">Country</string>
-    <string name="state">Province</string>
-    <string name="city">City</string>
-    <string name="age">Age</string>
+    <string name="medical_record">Medical Record</string>
     <string name="payment_status">Patient Status</string>
     <string name="no_bpjs">No. BPJS</string>
     <string name="postal_code">Postal Code</string>
@@ -334,5 +330,12 @@
     <string name="ask_the_nurse_chief_to_sign_to_confirm_the_handover_of_item">Ask the nurse chief to sign to confirm the handover of item</string>
     <string name="title_salesman_signature">Salesman Signature</string>
     <string name="ask_the_salesman_to_sign_to_confirm_the_handover_of_item">Ask the salesman to sign to confirm the handover of item</string>
+
+    <!-- accept add patient screen -->
+    <string name="edt_medical_record_botsheet">Medical Record</string>
+    <string name="edt_payment_status_botsheet">Payment Status</string>
+    <string name="btn_add_patient">Add Patient</string>
+    <string name="btn_save_patient">Save</string>
+
 
 </resources>
